--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # to git diff
-      - run: git fetch origin master
+        with:
+          fetch-depth: 0
       - name: install libgbm
         run: |
           sudo apt-get update
