:innocent: also update other actions

--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.client_payload.branch }}
+          fetch-depth: 0
       - name: merge
         run: |
           git config user.name okitan
