--- a/.github/workflows/on-master-pushed.yml
+++ b/.github/workflows/on-master-pushed.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: dispatch event for all branch
         run: >
           git branch --remote
