--- a/.github/workflows/on-notlinked-venues-changed.yml
+++ b/.github/workflows/on-notlinked-venues-changed.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: check auto merge
         # on.pull_request.paths and changed_files == 1 means only notlinked.ltsv is changed
         if: github.event.pull_request.changed_files == 1
