--- a/.github/workflows/on-labeled-mergeable.yml
+++ b/.github/workflows/on-labeled-mergeable.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: merge
-        uses: pascalgn/automerge-action@0.15.3
+        uses: pascalgn/automerge-action@v0.15.3
         env:
           GITHUB_TOKEN: "${{ secrets.MY_GITHUB_TOKEN }}"
           MERGE_LABELS: mergeable
