--- a/.github/workflows/merge-master.yml
+++ b/.github/workflows/merge-master.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.branch }}
           fetch-depth: 0
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
       - name: merge
         run: |
           git config user.name okitan
