--- a/.github/workflows/scheduled-scrape.yml
+++ b/.github/workflows/scheduled-scrape.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: 18
