--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
   },
   "devDependencies": {
     "@types/jest": "29.2.4",
+    "@types/node": "18.11.18",
     "@types/yeoman-environment": "2.10.8",
     "prettier": "2.8.1",
     "ts-jest": "29.0.3",
-    "typescript": "4.8.4",
+    "typescript": "4.9.4",
     "yeoman-generator": "5.7.0"
   }
 }
