--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "29.2.5",
+    "@types/node": "18.11.18",
     "@types/yeoman-environment": "2.10.8",
     "prettier": "2.8.1",
     "ts-jest": "29.0.3",
